--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
           <ul class="navbar-nav ml-auto">
 
             <li class="nav-item">
-              <a href="" class="nav-link">Premium</a>
+              <a href="" class="nav-link" onclick="alert('Esta pagina ainda não foi implementada :)')">Premium</a>
             </li>
 
             <li class="nav-item">
-              <a href="" class="nav-link">Ajuda</a>
+              <a href="" class="nav-link" onclick="alert('Esta pagina ainda não foi implementada :)')">Ajuda</a>
             </li>
 
             <li class="nav-item">
-              <a href="" class="nav-link">Baixar</a>
+              <a href="" class="nav-link" onclick="alert('Esta pagina ainda não foi implementada :)')">Baixar</a>
             </li>
 
             <li class="nav-item divisor"></li>
